<resources>
    <string name="app_name">E-Books Library</string>
    <string name="continue_without_login">Продовжити без авторизації</string>
    <string name="login">Авторизуватися</string>
    <string name="welcome_to_book_app">Вітаємо у E-Books Library!</string>
    <string name="new_to_book_app_create_an_account">Вперше користуєтеся E-Books Library? <b>Зареєструйтеся!</b></string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забули пароль?</string>
    <string name="login_to_your_account">Авторизуйтеся</string>
    <string name="create_new_account">Створіть новий акаунт</string>
    <string name="name">Ім\'я</string>
    <string name="confirm_password">Підтвердіть пароль</string>
    <string name="register">Реєстрація</string>
    <string name="dashboard_user">Панель користувача</string>
    <string name="email_example">abc@example.com</string>
    <string name="dashboard_admin">Панель адміністратора</string>
    <string name="add_category"><b>+ Додати категорію</b></string>
    <string name="add_new_book">Додавання нової книги</string>
    <string name="add_new_book_category">Додавання нової категорії</string>
    <string name="category_title">Назва категорії</string>
    <string name="submit">Додати</string>
    <string name="book_title">Назва книги</string>
    <string name="book_category">Категорія</string>
    <string name="upload">Завантажити</string>
    <string name="book_description">Опис книги</string>
    <string name="books">Книги</string>
    <string name="edit_book">Редагування книги</string>
    <string name="update">Оновити</string>
    <string name="book_detail">Деталі про книгу</string>
    <string name="date">Дата</string>
    <string name="size">Розмір</string>
    <string name="views">Переглядів</string>
    <string name="downloads">Завантажень</string>
    <string name="pages">Сторінок</string>
    <string name="undefined">N/A</string>
    <string name="read">Читати</string>
    <string name="read_book">Перегляд книги</string>
    <string name="download">Завантажити</string>
    <string name="search">Пошук</string>
    <string name="favorite">Додати до улюблених</string>
    <string name="profile">Профіль</string>
    <string name="account">Роль</string>
    <string name="member">Зареєстрований</string>
    <string name="favorites">Улюблені книги</string>
    <string name="favorites_list">Список улюблених книг</string>
    <string name="edit_profile">Редагування профілю</string>
    <string name="forgot_password_title">Відновлення паролю</string>
    <string name="forgot_password_subtitle">Введіть поштову адресу для отримання інструкцій щодо відновлення паролю</string>
    <string name="send">Надіслати</string>
</resources>